index: Fix footer on mobile
It is only icons

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -121,11 +121,3 @@
 	#footer {
 		padding: 4em 0;
 	}
-
-		#footer .copyright li {
-			border-left: 0;
-			display: block;
-			line-height: 2em;
-			margin-left: 0;
-			padding-left: 0;
-		}
